[gd_scene load_steps=4 format=2]

[ext_resource path="res://Screens/Camera/CameraInterpolate3D/InterpolatedThirdPersonCamera.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
margin = 0.001
radius = 0.2

[sub_resource type="SphereShape" id=2]
radius = 0.956496

[node name="CameraController" type="Spatial"]
script = ExtResource( 1 )

[node name="CameraTiltPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0 )

[node name="SpringArm" type="SpringArm" parent="CameraTiltPivot"]
transform = Transform( 1, 0, 0, 0, 0.999999, -1.49012e-08, 0, 1.49012e-08, 0.999999, 0, 0, 1.5 )
shape = SubResource( 1 )
spring_length = 2.418

[node name="CameraOriginalPosition" type="Spatial" parent="CameraTiltPivot/SpringArm"]

[node name="CameraCollision" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0.388229, 1.44889 )
collision_layer = 0
collision_mask = 3

[node name="Camera" type="Camera" parent="CameraCollision"]
doppler_tracking = 1
current = true
size = 0.1

[node name="CollisionShape" type="CollisionShape" parent="CameraCollision"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0774306, -0.785884 )
shape = SubResource( 2 )
